--- a/src/pages/private/AutoStars/Table/Table.module.scss
+++ b/src/pages/private/AutoStars/Table/Table.module.scss
@@ -168,7 +168,7 @@
       font-weight: 700;
       font-size: 18px;
       margin: 25px 0;
-      color: #fff;
+      color: #cbf3f0;
 
       @include media-breakpoint-up(xl) {
         line-height: 34px;
