--- a/src/pages/private/Team/Team.module.scss
+++ b/src/pages/private/Team/Team.module.scss
@@ -2,6 +2,13 @@
 @import "~bootstrap/scss/variables";
 @import "~bootstrap/scss/mixins";
 
+
+.teamCard {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 45px;
+}
+
 .search {
   margin-bottom: 40px;
 
