--- a/src/pages/private/mareix/TableQueue.module.scss
+++ b/src/pages/private/mareix/TableQueue.module.scss
@@ -7,22 +7,45 @@
 
   .header {
     display: flex;
+    justify-content: space-between;
+    align-items: center;
     position: relative;
     align-items: center;
     margin: 40px 0 20px;
 
     .close {
-      display: block;
-      position: absolute;
-      transform: translateY(-50%);
+      display: flex;
+      align-items: center;
+      position: relative;
       cursor: pointer;
-      width: 27px;
-      top: 50%;
+      width: 55px !important;
+      height: 55px;
       right: 0;
 
-      img {
-        display: block;
-        max-width: 100%;
+      .closeIT, .closeIB {
+        width: 100%;
+        height: 7px;
+        display: inline-block;
+        position: absolute;
+
+        border-radius: 15px;
+        background-color: #72ddf7;
+        transition: all .4s ease-in-out;
+      }
+
+      .closeIT {
+        transform: rotate(-45deg);
+      }
+
+      .closeIB {
+        transform: rotate(45deg);
+      }
+
+      &:hover .closeIT {
+        transform: rotate(45deg);
+      }
+      &:hover .closeIB {
+        transform: rotate(-45deg);
       }
 
       @include media-breakpoint-up(xl) {
@@ -30,13 +53,15 @@
       }
     }
 
+
     .title {
+      font-family: 'Nunito';
       text-transform: uppercase;
       text-align: center;
       font-weight: 800;
       font-size: 26px;
       line-height: 1;
-      color: #0b2e13;
+      color: #00c3e1;
       margin: 0;
 
       @include media-breakpoint-up(xl) {
@@ -57,17 +82,21 @@
     }
   }
 
+ 
+
   .nav {
     display: flex;
     flex-wrap: nowrap;
 
     a {
+      font-family: 'Nunito';
+
       display: inline-flex;
       padding: 13px 10px;
       line-height: 28px;
       font-weight: bold;
       font-size: 24px;
-      color: #fff;
+      color: #00c3e1a1;
 
       + a {
         margin-left: 15px;
@@ -75,6 +104,8 @@
 
       &.active {
         color: #00c3e1;
+      font-family: 'Nunito';
+
       }
     }
 
@@ -90,6 +121,8 @@
     margin-top: 20px;
 
     input[type='text'] {
+      font-family: 'Nunito';
+
       display: flex;
       position: relative;
       align-items: center;
@@ -126,6 +159,8 @@
 
   .actions {
     button {
+      font-family: 'Nunito';
+
       display: inline-block;
       background-color: transparent;
       font-size: 14px;
