--- a/src/pages/private/martrix/Table/Table.module.scss
+++ b/src/pages/private/martrix/Table/Table.module.scss
@@ -162,13 +162,15 @@
     margin: 0 auto;
 
     .price {
-      text-transform: uppercase;
-      text-align: center;
-      line-height: 2px;
-      font-weight: 700;
-      font-size: 18px;
-      margin: 25px 0;
-      color: #fff;
+     
+        text-transform: uppercase;
+        text-align: center;
+        line-height: 34px;
+        font-weight: 700;
+        font-size: 32px;
+        margin: 25px 0;
+        color: #cbf3f0;
+     
 
       @include media-breakpoint-up(xl) {
         line-height: 34px;
