--- a/src/scss/styles1.css
+++ b/src/scss/styles1.css
@@ -14,11 +14,12 @@ body::-webkit-scrollbar {
     width: 10px;
 }
 body::-webkit-scrollbar-track {
-background: #fff;
+background: rgb(255, 255, 255);
 }
 body::-webkit-scrollbar-thumb {
-background-color: #4cc9f0;
+background-color: #afafafcb;
 border-radius: 20px;
+width: 80%;
 
 }
 
@@ -35,7 +36,7 @@ border-radius: 20px;
 }
 
 .container {
-    max-width: 1730px !important;
+    max-width: 1430px !important;
     width: 100%;
     padding: 0 15px;
     margin: 0 auto;
@@ -72,11 +73,17 @@ border-radius: 20px;
     width: 50px;
     height: 50px;
 }
+.root-page {
+  position: relative;
+}
 
 .referral-link__url {
     text-align: center;
     font-size: 20px;
     color:#545a63;
+}
+.d-xl-block  {
+  position: relative;
 }
 
 .leader {
@@ -170,6 +177,10 @@ border-radius: 20px;
 color: #545a63;
 }
 
+
+.root-page-title-m {
+  color: #4ccaf09d;
+}
 .startrek__title {
     border: none;
     box-shadow: 0 14px 24px hsl(0deg 6% 80% / 25%);
@@ -187,24 +198,25 @@ color: #545a63;
 }
 
 .leader__image img {
-    width: 450px;
-    height: 450px;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
     border-radius: 50%;
     outline: 8px solid #fff;
     border: 8px solid #99d98c;
-    transform: translateX(-50px) translateY(-75px);
+    margin: 50px;
 }
 
 
 .leader__image-mentor img {
-    width: 450px;
-    height: 450px;
+    width: 350px;
+    height: 350px;
     object-fit: cover;
     border-radius: 50%;
     outline: 8px solid #fff;
     border: 8px solid #4ccaf09d;
-    transform: translateX(-50px) translateY(-75px);
+    margin: 50px;
+   
 }
 
 .leader__info {
@@ -656,7 +668,7 @@ color: #545a63;
     }
   }
 
-  p{
+  .solry-all-block p {
     color:#fff;
     font-family: system-ui;
     position: absolute;
@@ -1185,4 +1197,164 @@ color: #545a63;
 .link-blue:hover {
   border-radius: 20px !important;
   outline: none !important;
+}
+
+
+#chart_57723_1_ChartTitle {
+  margin: 30px 0 55px;
+  font-size: 32px !important;
+  font-family: 'Nunito' !important;
+  font-weight: 600 !important;
+  color: #8f8f8f !important; 
+  fill: #06d6a0 !important;
+}
+
+.all_title, .middle-title, .sm {
+  text-align: center;
+  font-style: none;
+  font-size: 28px;
+  margin: 30px 0 40px;
+  color: #5fa8d3;
+  font-family: 'Nunito';
+} 
+
+.middle-title, .sm {
+  font-size: 22px;
+}
+
+.meta {
+  display: grid;
+  grid-template-columns: repeat(3, auto);
+  gap: 5px;
+  justify-content: center;align-items: center;
+}
+
+.clBuyForm {
+  border: 2px solid #cae9ff;
+  border-radius: 10px;
+  padding: 0 40px 40px;
+}
+
+.line_first {
+  display: grid;
+  margin-bottom: 40px;
+  grid-template-columns: repeat(2, auto);
+  gap: 10px;
+  align-items:start;
+  justify-content: start;
+}
+.c1 {
+  color: #62b6cb;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 1;
+}
+
+.c2 span {
+  color: #62b6cb;
+  font-size: 22px;
+  font-weight: 500;
+  line-height: 1;
+}
+
+.block-lines {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, auto);
+  justify-content: center;
+  align-items: center;
+  column-gap: 30px;
+  row-gap: 40px;
+}
+
+.block-lines .lines-title {
+  display: inline-block;
+  margin-bottom: 15px;
+  font-size: 20px;
+  color: #5fa8d3;
+  font-family: 'Nunito';
+  font-weight: 500;
+}
+
+input {box-sizing: border-box !important;}
+.result {
+  border: 2px solid #cae9ff;
+  border-radius: 4px;
+  padding: 5px 10px;
+  margin-bottom: 15px;
+}
+.clSellForm  {
+  border: 2px solid #cae9ff;
+  border-radius: 10px;
+  padding: 0 50px 45px;
+  transition: all .2s ease-in-out;
+ 
+}
+
+/* .lines span {
+  display: inline-block;
+  margin-bottom: 15px;
+  font-size: 20px;
+  color: #5fa8d3;
+  font-family: 'Nunito';
+  font-weight: 500;
+} */
+
+.clRow td {
+  padding: 5px 10px;
+  transition: all .3s ease-in-out;
+}
+
+.clRow:hover {
+  background: rgba(232, 232, 232, 0.588);
+} 
+
+.poles {
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  gap: 15px;
+  justify-content: center;
+  align-items: center;
+}
+
+.poles input {
+  box-sizing: border-box;
+  margin: 0 !important;
+  border: 1px solid #1b4965;
+  color: #62b6cb;
+  font-family: 'Nunito';
+  font-size: 16px;
+  font-weight: 500;
+}
+
+.clCreateOrder  {
+  border: 1px solid #1b4965 !important;
+  border-radius: 5px !important;
+  transition: all .35s ease-in-out;
+  width: 100%;
+  height: 38px ;
+  font-family: 'Nunito' !important;
+  font-size: 18px !important;
+  background: #fff !important;
+  color: #1b4965 !important;
+  transition: all .4s ease-in-out !important;
+}
+
+.line {
+  height: 100%;
+}
+
+.btn-block {
+  display: grid;
+  grid-template-columns: 5fr 1fr;
+  gap: 15px;
+  justify-content: center;
+  height: 100%;
+  align-items: end;
+}
+
+.clCreateOrder:hover {
+  background: #cae9ff !important;
+  border: 1px solid #fff !important;
+  color: #5fa8d3 !important;
 }
