--- a/src/components/Select/Select.module.scss
+++ b/src/components/Select/Select.module.scss
@@ -83,3 +83,89 @@
     }
   }
 }
+
+
+@media (max-width:768px) {
+  .Select {
+    display: flex;
+    height: 50px;
+    cursor: pointer;
+    margin: 4px 0;
+    &:hover {
+      .arrow {
+        path {
+          fill: $blue;
+        }
+      }
+    }
+  
+    .currentValue {
+      background-color: #cbf3f0 !important;
+      position: relative;
+      z-index: 2;
+      width: 100%;
+      color: #fff;
+      display: flex;
+      align-items: center;
+      padding: 0 60px 0 26px;
+      border: 1px solid $white;
+      border-radius: 55px;
+      font-size: 0.9rem;
+      z-index: 10;
+  
+      .arrow {
+        width: 14px;
+        height: 21px;
+        position: absolute;
+        top: 50%;
+        right: 32px;
+        transform: translateY(-50%);
+      }
+    }
+  
+    .options {
+      height: 0;
+      width: max-content;
+      min-width: 83.24%;
+      position: absolute;
+      top: 58px;
+      left: 50%;
+      transform: translateX(-50%);
+      z-index: 10;
+     
+      border: 1px solid $white;
+      border-radius: 0 0 20px 20px;
+      overflow: hidden;
+      opacity: 0;
+      background-color: #cbf3f0 !important;
+  
+      &.opened {
+        height: initial;
+        opacity: 1;
+      }
+  
+      .wrapper {
+        max-height: 370px;
+        overflow: auto;
+  
+        .wrapper::-webkit-scrollbar {
+          width: 5px;
+          opacity: 0;
+          display: none;
+        }
+  
+        .option {
+          padding: 6px 8px 6px 18px;
+          border-bottom: 1px solid $white;
+          font-size: 1rem;
+  
+      
+  
+          &:last-child {
+            border: none;
+          }
+        }
+      }
+    }
+  }
+}
