--- a/src/scss/MainPage.module.css
+++ b/src/scss/MainPage.module.css
@@ -83,6 +83,72 @@
     cursor: pointer;
 }
 
+.burgerBlock {
+    display: none;
+    justify-self: center;
+    align-self: center;
+    width: 30px;
+    height: 25px;
+}
+.lineBurger {
+    display: inline-block;
+    height: 3px;
+    border-radius: 5px;
+    width: 100%;
+    background-color: #ffffff;
+    pointer-events: none;
+    transition: all .6s ease-in-out;
+  }
+  
+  .lineBurgerBottom, .lineBurgerTop {
+    position: absolute;
+    content: '';
+    display: inline-block;
+    height: 3px;
+    border-radius: 5px;
+    width: 100%;
+    background-color: #ffffff;
+    pointer-events: none;
+    transition: all .6s ease-in-out;
+  }
+  
+  .lineBurgerBottom {
+    top: 0;
+    left: 0;
+    right: 0;
+  }
+  
+  .lineBurgerTop {
+    bottom: 0;
+    left: 0;
+    right: 0;
+  }
+  
+  
+  .burgerActive .lineBurger{
+    
+    opacity: 0;
+  }
+  
+  
+  .burgerActive .lineBurgerBottom{
+    transform: rotate(315deg) translateX(-10px) translateY(5px);
+  }
+  
+  
+  .burgerActive .lineBurgerTop{
+    transform: rotate(-315deg) translateX(-10px) translateY(-5px);
+  }
+  .hamburgerButton {
+    display: inline-flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+  }
+
 .btnGradient:hover {
     background-position: 100% 0;
     moz-transition: all .4s ease-in-out;
@@ -161,6 +227,7 @@
     display: grid;
     
     grid-template-columns: repeat(2, auto);
+    gap: 25px;
     justify-content: space-between;
     align-items: start;
 }
@@ -248,4 +315,218 @@
 
 .yb {
     background-image: url('./media/youtube-svgrepo-com.svg')
+}
+
+@media (max-width:1200px) {
+    .linkNav {
+    font-size: 16px;
+    }
+    .footerBottom a {
+    font-size: 15px;
+    }
+    .footerSoc {
+        gap: 15px;
+    }
+    .footerBottom {
+        gap: 15px;
+    }
+    .icon {
+        width: 25px;
+        height: 25px !important;
+    }
+}
+
+@media (max-width: 992px) {
+
+    .headerCont {
+        gap: 15px;
+    }
+    .logoWrap {
+        font-size: 25px;
+    }
+    .logo img {
+        display: inline-block;
+        width: 30px;
+        height: 30px;
+    }
+    .listNav {
+        gap: 15px;
+    }
+    .linkNav {
+        font-size: 14px;
+    } 
+    .Hero {
+        min-height: 550px;
+    }
+    .wrap {
+        max-width:85% ;
+        padding: 125px 0 0 40px;
+   }
+   .title {
+    font-size: 40px;
+   }
+   .about {
+    padding: 90px 0 90px;
+    }
+    .titleAbout {
+        font-size: 32px;
+    margin-bottom: 25px;
+
+    }
+    .descrAbout {
+        font-size: 16px;
+        max-width: 85%;
+    }
+    .footer {
+        padding: 30px 0;
+    }
+    .footerBottom a {
+        font-size: 14px;
+    }
+    .footerSoc {
+        gap: 10px;
+    }
+    .footerleft {
+        gap: 20px;
+    }
+    .icon {
+        width: 20px;
+        height: 20px !important;
+    }
+}
+
+@media (max-width:768px) {
+    .headerCont {
+        padding: 0 15px;
+    }
+    .burgerBlock {
+        display: block;
+        margin: 0 0 0 15px;
+    }
+    .navBlock {
+        display: none;
+    }
+    .Hero {
+        min-height: 450px;
+    }
+    .wrap {
+        max-width:90% ;
+        padding: 100px 0 40px 30px;
+   }
+   .title {
+    font-size: 32px;
+    margin-bottom: 10px;
+   }
+   .descr {
+    font-size: 15px;
+   }
+
+   
+    .about {
+        padding: 60px 0 60px;
+    }
+    .titleAbout {
+        font-size: 26px;
+        margin-bottom: 15px;
+    }
+    .descrAbout {
+        font-size: 14px;
+    }
+    .footerleft {
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(1, auto);
+        justify-content: center;
+        align-items: center;;
+    }
+    .wrapperFooter {
+        padding: 0 15px;
+        align-items: center;
+    }
+    .footerSoc {
+        justify-content: center;
+    }
+    .footerBottom {
+        grid-template-columns: repeat(1,auto);
+        grid-template-rows: repeat(3, auto);
+    }
+
+}
+
+
+@media (max-width:576px) {
+    .header {
+        height: 60px;
+    }
+    .logoWrap {
+        font-size: 18px;
+        gap: 2px;
+    }
+    .logo img {
+        display: inline-block;
+        width: 22px;
+        height: 22px;
+    }
+    .headerCont {
+        padding: 0 15px;
+        gap: 7px;
+        align-self: center;
+    }
+    .Hero {
+        min-height: 350px;
+        margin-top: 60px;
+    }
+    .wrap {
+        max-width:90% ;
+        padding: 100px 0 40px 30px;
+   }
+   .title {
+    font-size: 24px;
+    margin-bottom: 10px;
+   }
+   .descr {
+    font-size: 13px;
+   }
+   .burgerBlock {
+    display: block;
+    margin: 0 0 5px 5px;
+    width: 25px;
+    height: 20px;
+}
+
+   .btnGradient {
+        font-size: 12px;
+    height: 30px;
+    padding: 0 10px;
+    
+   }
+   .langBlock {
+    gap: 7px;
+
+   }
+
+   .lineBurger, .lineBurgerBottom, .lineBurgerTop {
+    height: 2px;
+   }
+   .burgerActive .lineBurgerBottom{
+    transform: rotate(315deg) translateX(-7.5px) translateY(5px);
+  }
+  
+  
+  .burgerActive .lineBurgerTop{
+    transform: rotate(-315deg) translateX(-7.5px) translateY(-5px);
+  }
+    .about {
+        padding: 60px 0 60px;
+    }
+    .titleAbout {
+        font-size: 22px;
+        margin-bottom: 13px;
+    }
+    .descrAbout {
+        font-size: 14px;
+    }
+    .wrapperFooter {
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(1,auto);
+    }
 }
