--- a/src/scss/MainPage.module.css
+++ b/src/scss/MainPage.module.css
@@ -215,6 +215,32 @@
     font-weight: 500;
     margin-bottom: 35px;
 }
+
+.dropBlock {
+    width: 100%;
+    position: absolute;
+    background-image: linear-gradient(to bottom, rgba(32,18,111,1) 10%,rgba(32,18,111,1) 100%);
+    transition: all .4s ease-in-out;
+    top: -200px;
+}
+
+.activeDrop {
+    top: 80px;
+}
+
+
+.dropList {
+    display: grid;
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(4, auto);
+    gap: 10px;
+    width: 100%;
+    padding:  20px ;
+    list-style-type: none;
+   
+}
+
+
 .descrAbout {
     color:#25066d;
     font-family: 'Nunito', sans-serif;
